# obamafy

./: .gitignore  README.md  app.py  devenv.nix  pyproject.toml
shaders/: advect.frag  apply_forces.frag  divergence.frag  fullscreen.vert  jacobi.frag  projection.frag  render.frag  vorticity.frag
