[project]
name = "obamafy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "glfw>=2.10.0",
    "moderngl>=5.12.0",
    "moderngl-window>=3.1.1",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "pyglet>=2.1.9",
    "pyopengl>=3.1.10",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }
torchaudio = { index = "pytorch-cu129" }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
